# haks

./: CHANGELOG.md  LICENSE  README.md  haks.cabal
src-exe/: Main.hs
src/Haks/: Aksarify.hs  Engine.hs  Haks.hs  NGram.hs  Types.hs  Utilities.hs
src/Haks/Chinese/: Particlize.hs  Particulator.hs  Tokenizer.hs  Types.hs
src/Haks/Sanskrit/Roman/: Particulator.hs
src/Haks/Tibetan/Roman/: Particulator.hs  Tokenizer.hs
src/Haks/Tibetan/Uchen/: Particulator.hs
