name:                haks
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
license-file:        LICENSE
author:              Michael Litchard
maintainer:          michael@schmong.org
copyright:           © 2017 Michael Litchard
homepage:            https://github.com/mlitchard/haks
bug-reports:         https://github.com/mlitchard/haks/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/mlitchard/haks

library
  default-language:  Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   Haks.Chinese.Tokenizer 
                     Haks.Chinese.Types
                     Haks.Engine
                     Haks.Utilities
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , text

executable haks-exe
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , haks

test-suite haks-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , haks

test-suite haks-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , haks

benchmark haks-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , haks
